--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <link
         href="https://fonts.googleapis.com/css2?family=Abril+Fatface&family=Catamaran:wght@200&family=Courgette&family=Edu+TAS+Beginner:wght@700&family=Lato:wght@300;900&family=Mukta:wght@700&family=Mulish:wght@300&family=Open+Sans&family=PT+Sans:ital,wght@1,700&family=Poppins:wght@300&family=Raleway:wght@100&family=Roboto&family=Roboto+Condensed:wght@700&family=Roboto+Slab&display=swap"
         rel="stylesheet">
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
 </head>
 
 <body>
@@ -20,7 +21,6 @@
             </div>
             <ul>
                 <li>
-                    <a id="home" href="index.html">Home</a>
                     <a id="shop"  href="mens.html">Mens</a>
                     <a id="blog"  href="shopping.html">Women</a>
                     <a id="contact"  href="Contact.html">Contact</a>
@@ -153,6 +153,8 @@
                         </div>
                     </div>
                 </div>
+                <br>
+                <br>
 
 
                 
