--- a/index.html
+++ b/index.html
@@ -21,6 +21,8 @@
             </div>
             <ul>
                 <li>
+                    <a id="home" href="index.html">Home</a>
+
                     <a id="shop"  href="mens.html">Mens</a>
                     <a id="blog"  href="shopping.html">Women</a>
                     <a id="contact"  href="Contact.html">Contact</a>
@@ -61,7 +63,7 @@
                         <i class="fa-solid fa-star"></i>
                         <i class="fa-solid fa-star"></i>
                         <i class="fa-solid fa-star-half-stroke"></i> <br>
-                        <button>Add to Cart</button>
+                        <button>View</button>
                     </a>
                     </div>
                  </div>
@@ -76,7 +78,7 @@
                         <i class="fa-solid fa-star"></i>
                         <i class="fa-solid fa-star"></i>
                         <i class="fa-solid fa-star-half-stroke"></i> <br>
-                        <button>Add to Cart</button>
+                        <button>View</button>
                     </a>
                     </div>
                  </div>
@@ -90,7 +92,7 @@
                             <i class="fa-solid fa-star"></i>
                             <i class="fa-solid fa-star"></i>
                             <i class="fa-solid fa-star-half-stroke"></i> <br>
-                            <button>Add to Cart</button>
+                            <button>View</button>
                         </a>
                         </div>
                     </div>
