--- a/mens.html
+++ b/mens.html
@@ -38,14 +38,15 @@
     <ul>
         <li>
             <a id="home" href="index.html">Home</a>
-            <a id="men"  href="mens.html">Mens</a>
-            <a id="women"  href="shopping.html">Women</a>
+            <a id="shop"  href="mens.html">Mens</a>
+            <a id="blog"  href="shopping.html">Women</a>
             <a id="contact"  href="Contact.html">Contact</a>
             <a href="#shopping-cart" style="color: black;">  <i style="margin-right: 10;" class="fa-solid fa-cart-shopping justify-content-end fa-xl" ></i></a>
 
         </li>
     </ul>
-  </nav>
+</nav>
+
  
 
 
@@ -328,13 +329,6 @@
     </div>
   </div>
 </section>
-
-
-
- 
-
-<!--External JS-->
-<script src="shoppiing.js"></script>
 
 </body>
 </html>
