--- a/shopping.html
+++ b/shopping.html
@@ -37,16 +37,15 @@
     </div>
     <ul>
         <li>
-            <a id="home" href="index.html">Home</a>
+          <a id="home" href="index.html">Home</a>
             <a id="shop"  href="mens.html">Mens</a>
-            <a id="women"  href="shopping.html">Women</a>
+            <a id="blog"  href="shopping.html">Women</a>
             <a id="contact"  href="Contact.html">Contact</a>
             <a href="#shopping-cart" style="color: black;">  <i style="margin-right: 10;" class="fa-solid fa-cart-shopping justify-content-end fa-xl" ></i></a>
 
         </li>
     </ul>
 </nav>
-
 
  
 
@@ -300,7 +299,6 @@
     </tr>
   </thead>
   <tbody class="cart-items">
-    
      
   </tbody>
 </table>
@@ -332,12 +330,6 @@
   </div>
 </section>
 
-
-
- 
-
-<!--External JS-->
-<script src="shopping.js"></script>
 
 </body>
 </html>
